[package]
name = "cx_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
webview2-com = "0.33"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_JobObjects",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
windows-core = "0.58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
